--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "svelte-check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
+    "@lucide/svelte": "^0.555.0",
     "sv-router": "^0.11.0",
     "svelte": "^5.43.14"
   },
