--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@lucide/svelte": "^0.555.0",
+    "fastintear": "^0.3.8",
     "sv-router": "^0.11.0",
     "svelte": "^5.43.14"
   },
