--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rsbuild/core": "^1.6.7",
     "@rsbuild/plugin-svelte": "^1.0.11",
     "svelte-check": "^4.3.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@types/bun": "latest"
   }
 }
