rm indb add dexie

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@lucide/svelte": "^0.555.0",
     "@sleet-js/ref-exchange-methods-const": "^0.0.1",
+    "dexie": "^4.2.1",
     "fastintear": "^0.3.8",
-    "indb": "^4.0.1",
     "sv-router": "^0.11.0",
     "svelte": "^5.43.14"
   },
