--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dexie": "^4.2.1",
     "fastintear": "^0.3.8",
     "sv-router": "^0.11.0",
-    "svelte": "^5.43.14"
+    "svelte": "^5.43.14",
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@rsbuild/core": "^1.6.7",
