--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rsbuild/plugin-svelte": "^1.0.11",
     "@types/bun": "latest",
     "prettier": "3.7.4",
+    "prettier-plugin-svelte": "^3.4.1",
     "svelte-check": "^4.3.4",
     "typescript": "^5.9.3"
   }
