--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@lucide/svelte": "^0.562.0",
+    "@sleet-js/ft-methods-const": "^0.0.5",
     "@sleet-js/ref-exchange-methods-const": "^0.0.3",
     "@types/js-cookie": "^3.0.6",
     "dexie": "^4.2.1",
