--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rsbuild build",
     "dev": "rsbuild dev --open",
     "preview": "rsbuild preview",
-    "svelte-check": "svelte-check --tsconfig ./tsconfig.json"
+    "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
+    "asb": "asb"
   },
   "dependencies": {
     "@lucide/svelte": "^0.562.0",
