--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rsbuild/core": "^1.6.15",
     "@rsbuild/plugin-svelte": "^1.0.11",
     "@types/bun": "^1.3.5",
+    "assemblyscript": "^0.28.9",
     "prettier": "3.7.4",
     "prettier-plugin-svelte": "^3.4.1",
     "svelte-check": "^4.3.5",
