--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# as
+assembly/html.ts
+assembly/sw.ts
+
 # Local
 .DS_Store
 *.local
@@ -15,4 +19,5 @@ dist/
 !.vscode/extensions.json
 .idea
 /build
-assembly/html.ts
+
+# other
