--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@ asset_static_js_404_50274563_js.ts
 asset_static_js_404_50274563_js_LICENSE_txt.ts
 asset_static_js_async_262_523c5fd2_js.ts
 asset_static_js_index_a06e7fca_js.ts
+assembly/asset_static_js_index_1c03fa22_js.ts
 asset_sw_js.ts
-assets.ts
+# assets.ts
 
 
 # Local
