--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ asset_static_js_index_a06e7fca_js.ts
 assembly/asset_static_js_index_1c03fa22_js.ts
 asset_sw_js.ts
 # assets.ts
+dist.bndl
 
 
 # Local
